# qml-asteroid

./: .gitignore  CMakeLists.txt  README.md  generate-desktop.sh  qml-asteroid.pro  qtquickcontrols-asteroid.pro
cmake/: Asteroid6CMakeSettings.cmake  Asteroid6Translations.cmake  AsteroidCMakeSettings.cmake  AsteroidTranslations.cmake  FindAmberMpris.cmake  FindLipstick.cmake  FindMapplauncherd_qt5.cmake  FindMapplauncherd_qt6.cmake  FindMce.cmake  FindMlite5.cmake  FindMlite6.cmake  FindQtMpris.cmake  FindSystemSettings.cmake  FindTimed.cmake
examples/: examples.pro  layers.qml
examples/WidgetGallery/: WidgetGallery  WidgetGallery.pro  resources.qrc
examples/WidgetGallery/qml/: main.qml
examples/WidgetGallery/src/: main.cpp
src/: CMakeLists.txt  src.pro
src/app/: AsteroidApp6Config.cmake.in  AsteroidAppConfig.cmake.in  CMakeLists.txt  app.pro  asteroidapp.cpp  asteroidapp.h  asteroidapp.prf
src/controls/: CMakeLists.txt  controls.pro  master.qdocconf  qmldir  resources.qrc
src/controls/doc/: asteroid_controls.qdocconf
src/controls/qml/: Application.qml  BatteryParticles.qml  BorderGestureArea.qml  CircularScrollIndicator.qml  CircularSpinner.qml  Dims.qml  HandWritingKeyboard.qml  HighlightBar.qml  Icon.qml  IconButton.qml  Indicator.qml  IntSelector.qml  Label.qml  LabeledActionButton.qml  LabeledSwitch.qml  Layer.qml  LayerStack.qml  ListItem.qml  ListRow.qml  Marquee.qml  OptionCycler.qml  PageDot.qml  PageHeader.qml  Particle.qml  Particles.qml  ProgressCircle.qml  RemorseTimer.qml  RowSeparator.qml  SegmentedArc.qml  Slider.qml  Spinner.frag  Spinner.qml  SpinnerDelegate.qml  StatusPage.qml  Switch.qml  TextArea.qml  TextBase.qml  TextField.qml  TiltedSquare.qml  TimePicker.qml  (+5 more)
src/controls/src/: application_p.cpp  application_p.h  asteroidimageprovider.cpp  asteroidimageprovider.h  controls_plugin.cpp  controls_plugin.h  deviceinfo.cpp  deviceinfo.h  flatmesh.cpp  flatmesh.h  flatmesh_qt6.cpp  flatmeshgeometry.h  flatmeshnode.cpp  flatmeshnode.h  generate_flatmeshgeometry.py  gesturesextension.cpp  gesturesextension.h  icon.cpp  icon.h  themedaemonclient.cpp  themedaemonclient.h
src/icons/: README.md  icons.pro
src/settings/: CMakeLists.txt  qmldir
src/settings/src/: aboutsettings.cpp  aboutsettings.h  datetimesettings.cpp  datetimesettings.h  displaysettings.cpp  displaysettings.h  languagemodel.cpp  languagemodel.h  mceconfig.cpp  mceconfig.h  profilecontrol.cpp  profilecontrol.h  settings_plugin.cpp  settings_plugin.h
src/styles/: qmldir  styles.pro
src/styles/qml/: ApplicationWindowStyle.qml  BusyIndicatorStyle.qml  ButtonStyle.qml  CalendarStyle.qml  CheckBoxStyle.qml  ComboBoxStyle.qml  FocusFrameStyle.qml  GroupBoxStyle.qml  MenuBarStyle.qml  MenuStyle.qml  ProgressBarStyle.qml  RadioButtonStyle.qml  ScrollViewStyle.qml  SliderStyle.qml  SpinBoxStyle.qml  StatusBarStyle.qml  SwitchStyle.qml  TabViewStyle.qml  TableViewStyle.qml  TextAreaStyle.qml  TextFieldStyle.qml  ToolBarStyle.qml  ToolButtonStyle.qml
src/styles/src/: styles_plugin.cpp  styles_plugin.h
src/utils/: CMakeLists.txt  qmldir  utils.pro
src/utils/doc/: asteroid_utils.qdocconf
src/utils/src/: bluetoothstatus.cpp  bluetoothstatus.h  deviceinfo.cpp  deviceinfo.h  devicespecs.cpp  devicespecs.h  fileinfo.cpp  fileinfo.h  utils_plugin.cpp  utils_plugin.h
wayland-protocols/: asteroid-gestures-unstable-v1.xml
